<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/normal16"
    tools:context=".ui.counters.CounterFragment">


    <TextView
        android:id="@+id/tv_first_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/first_counter"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_first_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/akaya_telivigala"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:text="0" />

    <TextView
        android:id="@+id/tv_second_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/second_counter"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_second_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/akaya_telivigala"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:text="0" />

    <TextView
        android:id="@+id/tv_third_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/third_counter"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_third_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/akaya_telivigala"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:text="0" />

    <Button
        android:id="@+id/btn_users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal16"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/github_users"
        android:textColor="@color/black"
        android:textStyle="bold" />
</LinearLayout>