<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/border_padding">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- загрузка картинки -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_open_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_select_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- выбранная картинка -->
        <ImageView
            android:id="@+id/image_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:scaleType="fitStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_open_id" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/compress_data_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_padding"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_id"
            tools:visibility="visible">

            <!-- свойства изображения -->
            <TextView
                android:id="@+id/image_properties_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- качество изображения после сжатия -->
            <TextView
                android:id="@+id/image_compressor_title_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_padding"
                android:text="@string/image_compressor_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_properties_id" />

            <com.google.android.material.slider.Slider
                android:id="@+id/image_compressor_value_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_padding"
                android:stepSize="5"
                android:value="0"
                android:valueFrom="0"
                android:valueTo="100"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_compressor_title_id" />

            <!-- размер изображения после сжатия -->
            <TextView
                android:id="@+id/image_size_title_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_padding"
                android:text="@string/image_size_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_compressor_value_id" />

            <com.google.android.material.slider.Slider
                android:id="@+id/image_size_value_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_padding"
                android:stepSize="5"
                android:value="0"
                android:valueFrom="0"
                android:valueTo="100"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_size_title_id" />

            <!-- сохранение картинки -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_save_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_padding"
                android:text="@string/button_save_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_size_value_id" />

            <!-- крутилка -->
            <ProgressBar
                android:id="@+id/progress_bar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="@dimen/zero_size"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_padding"
                android:indeterminate="true"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/button_save_id"
                app:layout_constraintStart_toStartOf="@id/button_save_id"
                app:layout_constraintTop_toBottomOf="@id/button_save_id"
                tools:visibility="visible" />

            <!-- отмена процесса сохранения картинки -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_cancel_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_padding"
                android:text="@string/button_cancel_image"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/progress_bar"
                tools:visibility="visible" />

            <!-- сохраненная картинка -->
            <ImageView
                android:id="@+id/image_saved_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:adjustViewBounds="true"
                android:scaleType="fitStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_cancel_id" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>